# why-games-die

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
config/: analysis.yaml  event_taxonomy.yaml  games.yaml
data/processed/: decline_events.csv  decline_summary.csv  event_windows.csv  game_daily_metrics.csv  game_summary.csv  monthly_features.csv
notebooks/: 00_data_availability.ipynb  01_player_decline_detection.ipynb  02_review_sentiment_overlay.ipynb  03_event_annotation_analysis.ipynb  04_cross_game_comparison.ipynb
reports/: steam_decline_analysis.html  steam_decline_analysis.md
scripts/: build_processed_data.py  build_report.py  check_data_availability.py  fetch_raw_data.py  run_analysis.py  validate_outputs.py
src/game_decline/: __init__.py  config.py  raw_store.py  validation.py
src/game_decline/analysis/: __init__.py  decline_detection.py  event_windows.py  summary.py
src/game_decline/processing/: __init__.py  normalize_events.py  normalize_metadata.py  normalize_players.py  normalize_reviews.py  pipeline.py
src/game_decline/report/: build_report.py
src/game_decline/steam/: __init__.py  announcements.py  app_lookup.py  http.py  reviews.py  steamcharts.py  steamspy.py
src/game_decline/visualization/: __init__.py  comparison.py  timelines.py
tests/: test_analysis.py  test_config.py  test_processing.py  test_report.py  test_steamcharts.py  test_summary.py
tests/fixtures/normalize/: manual_events.csv
tests/fixtures/normalize/raw/steam_announcements/: 570_20260101T000000Z.json
(+4 files in other folders)
