[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "game-decline"
version = "0.1.0"
description = "Steam multiplayer player-count decline analysis."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
